fix: fixing overflow

--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -1,5 +1,7 @@
 .grid {
-  display: grid;
-  gap: 0.5rem;
-  grid-template-columns: repeat(auto-fill, minmax(min(16rem, 100%), 1fr));
+  &__cards {
+    display: grid;
+    gap: 0.5rem;
+    grid-template-columns: repeat(auto-fill, minmax(min(16rem, 100%), 1fr));
+  }
 }
