--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -1,7 +1,6 @@
 header {
   margin: 0;
   background-color: var(--header-bg-color);
-  width: 100vw;
 
   section {
     display: flex;
