--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -17,11 +17,6 @@ body {
   background-color: var(--background-color);
   color: var(--color);
 
-  main {
-    margin: 0 auto;
-    width: 1200px;
-  }
-
   button {
     color: var(--color);
   }
